--- a/Mytabmenudemo/app/src/main/AndroidManifest.xml
+++ b/Mytabmenudemo/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".login.LoginActivity" android:theme="@style/AppTheme.Dark">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,11 +19,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".login.LoginActivity"
-            android:theme="@style/AppTheme.Dark" />
-        <activity
             android:name=".login.SignupActivity"
             android:theme="@style/AppTheme.Dark" />
+        <activity
+            android:name=".activity.MainActivity"
+             />
         <activity android:name=".publish.PublishDish" />
         <activity android:name=".classification.ClassificationDishes" />
         <activity android:name=".dish.DishShow" />
